Add to the bigram NN part

--- a/makemore_series_karpathy/makemore_part1_bigram_lm.ipynb
+++ b/makemore_series_karpathy/makemore_part1_bigram_lm.ipynb
@@ -1572,7 +1572,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8a751b4a",
+   "id": "60ce1166",
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5c7c2dcb",
+   "id": "98782da2",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
    ],
    "source": [
     "# We'll break it down.\n",
-    "logits = (xenc @ W)         # log-counts.\n",
+    "logits = (xenc @ W)       # log-counts.\n",
     "counts = logits.exp()     # Equivalent to N from before where we were keeping counts for the next char.\n",
     "probs = counts / counts.sum(1, keepdims=True)\n",
     "probs"
@@ -1647,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0d50e782",
+   "id": "76840a4a",
    "metadata": {},
    "outputs": [
     {
@@ -1668,6 +1668,176 @@
     "# Now we have inputs that go through differentiable operations to get to the output\n",
     "# (prob distributions for the next char).\n",
     "# This allows us to backprop through the neural net."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ac2e5dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  5, 13, 13,  1])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SUMMARY ------------------------------>>>>\n",
+    "xs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "70e57f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 5, 13, 13,  1,  0])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "573c133f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Randomly initialize 27 neurons' weights. each neuron receives 27 inputs\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g)\n",
+    "\n",
+    "xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding\n",
+    "logits = xenc @ W # predict log-counts\n",
+    "counts = logits.exp() # counts, equivalent to N\n",
+    "probs = counts / counts.sum(1, keepdims=True) # probabilities for next character\n",
+    "# The last 2 lines here are together called a 'softmax'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1fa4b98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 27])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "5dadf82d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------\n",
+      "bigram example 1: .e (indexes 0,5)\n",
+      "input to the neural net: 0\n",
+      "output probabilities from the neural net: tensor([0.0607, 0.0100, 0.0123, 0.0042, 0.0168, 0.0123, 0.0027, 0.0232, 0.0137,\n",
+      "        0.0313, 0.0079, 0.0278, 0.0091, 0.0082, 0.0500, 0.2378, 0.0603, 0.0025,\n",
+      "        0.0249, 0.0055, 0.0339, 0.0109, 0.0029, 0.0198, 0.0118, 0.1537, 0.1459])\n",
+      "label (actual next character): 5\n",
+      "probability assigned by the net to the the correct character: 0.012286253273487091\n",
+      "log likelihood: -4.3992743492126465\n",
+      "negative log likelihood: 4.3992743492126465\n",
+      "--------\n",
+      "bigram example 2: em (indexes 5,13)\n",
+      "input to the neural net: 5\n",
+      "output probabilities from the neural net: tensor([0.0290, 0.0796, 0.0248, 0.0521, 0.1989, 0.0289, 0.0094, 0.0335, 0.0097,\n",
+      "        0.0301, 0.0702, 0.0228, 0.0115, 0.0181, 0.0108, 0.0315, 0.0291, 0.0045,\n",
+      "        0.0916, 0.0215, 0.0486, 0.0300, 0.0501, 0.0027, 0.0118, 0.0022, 0.0472])\n",
+      "label (actual next character): 13\n",
+      "probability assigned by the net to the the correct character: 0.018050702288746834\n",
+      "log likelihood: -4.014570713043213\n",
+      "negative log likelihood: 4.014570713043213\n",
+      "--------\n",
+      "bigram example 3: mm (indexes 13,13)\n",
+      "input to the neural net: 13\n",
+      "output probabilities from the neural net: tensor([0.0312, 0.0737, 0.0484, 0.0333, 0.0674, 0.0200, 0.0263, 0.0249, 0.1226,\n",
+      "        0.0164, 0.0075, 0.0789, 0.0131, 0.0267, 0.0147, 0.0112, 0.0585, 0.0121,\n",
+      "        0.0650, 0.0058, 0.0208, 0.0078, 0.0133, 0.0203, 0.1204, 0.0469, 0.0126])\n",
+      "label (actual next character): 13\n",
+      "probability assigned by the net to the the correct character: 0.026691533625125885\n",
+      "log likelihood: -3.623408794403076\n",
+      "negative log likelihood: 3.623408794403076\n",
+      "--------\n",
+      "bigram example 4: ma (indexes 13,1)\n",
+      "input to the neural net: 13\n",
+      "output probabilities from the neural net: tensor([0.0312, 0.0737, 0.0484, 0.0333, 0.0674, 0.0200, 0.0263, 0.0249, 0.1226,\n",
+      "        0.0164, 0.0075, 0.0789, 0.0131, 0.0267, 0.0147, 0.0112, 0.0585, 0.0121,\n",
+      "        0.0650, 0.0058, 0.0208, 0.0078, 0.0133, 0.0203, 0.1204, 0.0469, 0.0126])\n",
+      "label (actual next character): 1\n",
+      "probability assigned by the net to the the correct character: 0.07367684692144394\n",
+      "log likelihood: -2.6080667972564697\n",
+      "negative log likelihood: 2.6080667972564697\n",
+      "--------\n",
+      "bigram example 5: a. (indexes 1,0)\n",
+      "input to the neural net: 1\n",
+      "output probabilities from the neural net: tensor([0.0150, 0.0086, 0.0396, 0.0100, 0.0606, 0.0308, 0.1084, 0.0131, 0.0125,\n",
+      "        0.0048, 0.1024, 0.0086, 0.0988, 0.0112, 0.0232, 0.0207, 0.0408, 0.0078,\n",
+      "        0.0899, 0.0531, 0.0463, 0.0309, 0.0051, 0.0329, 0.0654, 0.0503, 0.0091])\n",
+      "label (actual next character): 0\n",
+      "probability assigned by the net to the the correct character: 0.0149775305762887\n",
+      "log likelihood: -4.201204299926758\n",
+      "negative log likelihood: 4.201204299926758\n",
+      "=========\n",
+      "average negative log likelihood, i.e. loss = 3.7693049907684326\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlls = torch.zeros(5)\n",
+    "for i in range(5):\n",
+    "    # i-th bigram:\n",
+    "    x = xs[i].item() # input character index\n",
+    "    y = ys[i].item() # label character index\n",
+    "    print('--------')\n",
+    "    print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')\n",
+    "    print('input to the neural net:', x)\n",
+    "    print('output probabilities from the neural net:', probs[i])\n",
+    "    print('label (actual next character):', y)\n",
+    "    p = probs[i, y]\n",
+    "    print('probability assigned by the net to the the correct character:', p.item())\n",
+    "    logp = torch.log(p)\n",
+    "    print('log likelihood:', logp.item())\n",
+    "    nll = -logp\n",
+    "    print('negative log likelihood:', nll.item())\n",
+    "    nlls[i] = nll\n",
+    "\n",
+    "print('=========')\n",
+    "print('average negative log likelihood, i.e. loss =', nlls.mean().item())"
    ]
   }
  ],
