Completed bigram colab

--- a/makemore_series_karpathy/makemore_part1_bigram_lm.ipynb
+++ b/makemore_series_karpathy/makemore_part1_bigram_lm.ipynb
@@ -1673,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ac2e5dbc",
+   "id": "7a54c018",
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "70e57f5f",
+   "id": "65fb7756",
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "573c133f",
+   "id": "2ec94cca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "1fa4b98f",
+   "id": "bc1cacd1",
    "metadata": {},
    "outputs": [
     {
@@ -1755,8 +1755,10 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5dadf82d",
-   "metadata": {},
+   "id": "e3814da2",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1838,6 +1840,457 @@
     "\n",
     "print('=========')\n",
     "print('average negative log likelihood, i.e. loss =', nlls.mean().item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c24bdf40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  5, 13, 13,  1])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Optimization...\n",
+    "xs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fef29483",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 5, 13, 13,  1,  0])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "ad8364ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Randomly initialize 27 neurons' weights. Each neuron receives 27 inputs.\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e01ff10f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Forward pass.\n",
+    "xenc = F.one_hot(xs, num_classes=27).float()     # input to the network: one-hot encoding\n",
+    "logits = xenc @ W                                # predict log-counts\n",
+    "counts = logits.exp()                            # counts, equivalent to N\n",
+    "probs = counts / counts.sum(1, keepdims=True)    # probabilities for next character\n",
+    "loss = -probs[torch.arange(5), ys].log().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "80a4026d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(3.7693, grad_fn=<NegBackward0>)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This matches the value we see for the total loss above when we were printing everything.\n",
+    "-probs[torch.arange(5), ys].log().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "5d443af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Backward pass.\n",
+    "W.grad = None    # set the gradient to 0.\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c5ac6151",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([27, 27])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W.grad.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "b173824f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Weight update.\n",
+    "W.data += -0.1 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "b63e6140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of examples:  228146\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Putting it all together.\n",
+    "\n",
+    "# Create the dataset\n",
+    "xs, ys = [], []\n",
+    "for w in words:\n",
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        xs.append(ix1)\n",
+    "        ys.append(ix2)\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)\n",
+    "num = xs.nelement()\n",
+    "print('Number of examples: ', num)\n",
+    "\n",
+    "# initialize the 'network'\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "61a9f23c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7686190605163574\n",
+      "3.3788061141967773\n",
+      "3.1610891819000244\n",
+      "3.027184247970581\n",
+      "2.934483051300049\n",
+      "2.867230176925659\n",
+      "2.8166537284851074\n",
+      "2.7771458625793457\n",
+      "2.745253324508667\n",
+      "2.7188303470611572\n",
+      "2.696505308151245\n",
+      "2.6773717403411865\n",
+      "2.6608052253723145\n",
+      "2.6463513374328613\n",
+      "2.633665084838867\n",
+      "2.622471332550049\n",
+      "2.6125476360321045\n",
+      "2.6037068367004395\n",
+      "2.595794916152954\n",
+      "2.5886809825897217\n",
+      "2.5822560787200928\n",
+      "2.5764293670654297\n",
+      "2.5711238384246826\n",
+      "2.566272735595703\n",
+      "2.5618226528167725\n",
+      "2.5577263832092285\n",
+      "2.5539445877075195\n",
+      "2.550442695617676\n",
+      "2.5471925735473633\n",
+      "2.5441696643829346\n",
+      "2.5413522720336914\n",
+      "2.538721799850464\n",
+      "2.536262035369873\n",
+      "2.5339581966400146\n",
+      "2.531797409057617\n",
+      "2.5297679901123047\n",
+      "2.527860164642334\n",
+      "2.5260636806488037\n",
+      "2.5243704319000244\n",
+      "2.522773265838623\n",
+      "2.521263837814331\n",
+      "2.519836664199829\n",
+      "2.5184857845306396\n",
+      "2.517204999923706\n",
+      "2.515990734100342\n",
+      "2.5148372650146484\n",
+      "2.5137410163879395\n",
+      "2.51269793510437\n",
+      "2.511704921722412\n",
+      "2.5107579231262207\n",
+      "2.509855031967163\n",
+      "2.5089924335479736\n",
+      "2.5081682205200195\n",
+      "2.507380247116089\n",
+      "2.5066258907318115\n",
+      "2.5059032440185547\n",
+      "2.5052106380462646\n",
+      "2.5045459270477295\n",
+      "2.503908157348633\n",
+      "2.503295660018921\n",
+      "2.502706289291382\n",
+      "2.5021398067474365\n",
+      "2.501594305038452\n",
+      "2.5010693073272705\n",
+      "2.500562906265259\n",
+      "2.500075578689575\n",
+      "2.4996049404144287\n",
+      "2.499150514602661\n",
+      "2.4987120628356934\n",
+      "2.498288154602051\n",
+      "2.4978787899017334\n",
+      "2.497483015060425\n",
+      "2.4970998764038086\n",
+      "2.4967293739318848\n",
+      "2.496370315551758\n",
+      "2.496022939682007\n",
+      "2.4956860542297363\n",
+      "2.4953596591949463\n",
+      "2.4950432777404785\n",
+      "2.4947361946105957\n",
+      "2.494438648223877\n",
+      "2.494149684906006\n",
+      "2.4938690662384033\n",
+      "2.4935967922210693\n",
+      "2.4933321475982666\n",
+      "2.493074893951416\n",
+      "2.4928252696990967\n",
+      "2.492582321166992\n",
+      "2.4923462867736816\n",
+      "2.492116689682007\n",
+      "2.4918932914733887\n",
+      "2.491675853729248\n",
+      "2.491464376449585\n",
+      "2.4912586212158203\n",
+      "2.491058111190796\n",
+      "2.4908626079559326\n",
+      "2.4906723499298096\n",
+      "2.4904870986938477\n",
+      "2.4903063774108887\n",
+      "2.4901304244995117\n",
+      "2.4899587631225586\n",
+      "2.4897916316986084\n",
+      "2.489628314971924\n",
+      "2.489469289779663\n",
+      "2.489314079284668\n",
+      "2.4891624450683594\n",
+      "2.4890148639678955\n",
+      "2.48887038230896\n",
+      "2.48872971534729\n",
+      "2.4885921478271484\n",
+      "2.4884581565856934\n",
+      "2.4883267879486084\n",
+      "2.488198757171631\n",
+      "2.4880735874176025\n",
+      "2.4879512786865234\n",
+      "2.4878318309783936\n",
+      "2.487715005874634\n",
+      "2.487600326538086\n",
+      "2.4874892234802246\n",
+      "2.487379550933838\n",
+      "2.4872729778289795\n",
+      "2.487168312072754\n",
+      "2.4870667457580566\n",
+      "2.486966133117676\n",
+      "2.486868381500244\n",
+      "2.4867727756500244\n",
+      "2.4866788387298584\n",
+      "2.4865872859954834\n",
+      "2.486497163772583\n",
+      "2.4864091873168945\n",
+      "2.486323118209839\n",
+      "2.486238718032837\n",
+      "2.4861562252044678\n",
+      "2.4860751628875732\n",
+      "2.4859957695007324\n",
+      "2.4859180450439453\n",
+      "2.485841751098633\n",
+      "2.485767126083374\n",
+      "2.4856936931610107\n",
+      "2.485621929168701\n",
+      "2.485551357269287\n",
+      "2.485482692718506\n",
+      "2.485414981842041\n",
+      "2.4853484630584717\n",
+      "2.485283136367798\n",
+      "2.4852192401885986\n",
+      "2.485156536102295\n",
+      "2.4850947856903076\n",
+      "2.485034465789795\n",
+      "2.484975576400757\n",
+      "2.484916925430298\n",
+      "2.4848597049713135\n",
+      "2.4848034381866455\n",
+      "2.484748363494873\n",
+      "2.484694480895996\n",
+      "2.4846413135528564\n",
+      "2.4845893383026123\n",
+      "2.4845376014709473\n",
+      "2.4844870567321777\n",
+      "2.484437942504883\n",
+      "2.484389066696167\n",
+      "2.4843411445617676\n",
+      "2.4842944145202637\n",
+      "2.484248161315918\n",
+      "2.4842026233673096\n",
+      "2.4841582775115967\n",
+      "2.484113931655884\n",
+      "2.4840710163116455\n",
+      "2.4840285778045654\n",
+      "2.4839866161346436\n",
+      "2.483945369720459\n",
+      "2.48390531539917\n",
+      "2.483865261077881\n",
+      "2.483825922012329\n",
+      "2.483787775039673\n",
+      "2.4837498664855957\n",
+      "2.483712911605835\n",
+      "2.483675956726074\n",
+      "2.4836394786834717\n",
+      "2.4836041927337646\n",
+      "2.483569383621216\n",
+      "2.483534574508667\n",
+      "2.4835009574890137\n",
+      "2.4834673404693604\n",
+      "2.4834344387054443\n",
+      "2.4834022521972656\n",
+      "2.483370304107666\n",
+      "2.4833385944366455\n",
+      "2.4833078384399414\n",
+      "2.4832773208618164\n",
+      "2.4832472801208496\n",
+      "2.483217716217041\n",
+      "2.4831883907318115\n",
+      "2.4831600189208984\n",
+      "2.4831314086914062\n",
+      "2.4831035137176514\n",
+      "2.4830760955810547\n",
+      "2.483048439025879\n",
+      "2.4830219745635986\n",
+      "2.4829957485198975\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gradient descent\n",
+    "for k in range(200):\n",
+    "  \n",
+    "    # forward pass\n",
+    "    xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding\n",
+    "    logits = xenc @ W # predict log-counts\n",
+    "    counts = logits.exp() # counts, equivalent to N\n",
+    "    probs = counts / counts.sum(1, keepdims=True) # probabilities for next character\n",
+    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()   # We add regularization\n",
+    "    print(loss.item())\n",
+    "\n",
+    "    # backward pass\n",
+    "    W.grad = None # set to zero the gradient\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # update\n",
+    "    W.data += -50 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "55dc402a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "junide.\n",
+      "janasah.\n",
+      "prelay.\n",
+      "a.\n",
+      "nn.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample from the 'neural net' model.\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for i in range(5):\n",
+    "  \n",
+    "    out = []\n",
+    "    ix = 0\n",
+    "    while True:\n",
+    "\n",
+    "        # ----------\n",
+    "        # BEFORE:\n",
+    "        #p = P[ix]\n",
+    "        # ----------\n",
+    "        # NOW:\n",
+    "        xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()\n",
+    "        logits = xenc @ W # predict log-counts\n",
+    "        counts = logits.exp() # counts, equivalent to N\n",
+    "        p = counts / counts.sum(1, keepdims=True) # probabilities for next character\n",
+    "        # ----------\n",
+    "\n",
+    "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itos[ix])\n",
+    "        if ix == 0:\n",
+    "            break\n",
+    "    print(''.join(out))"
    ]
   }
  ],
