--- a/makemore_series_karpathy/makemore_part2_mlp.ipynb
+++ b/makemore_series_karpathy/makemore_part2_mlp.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a5c7bd56",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        " 'evelyn']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "61041ec4",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "32033"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fc080b87",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "3d9c6d33",
    "metadata": {},
    "outputs": [
@@ -142,6 +142,7 @@
    "source": [
     "# Build the dataset.\n",
     "\n",
+    "# WE can update the block_size to get more context.\n",
     "block_size = 3            # Context length: how many characters do we take to predict the next one?\n",
     "X, Y = [], []\n",
     "for w in words[:5]:\n",
@@ -159,11 +160,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "39bfaad9",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([32, 3]), torch.int64, torch.Size([32]), torch.int64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape, X.dtype, Y.shape, Y.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "125cc1ae",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We will embed the 27 chars in a 2-dimensional space.\n",
+    "C = torch.randn((27, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b5ff57fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.5317, -0.8100],\n",
+       "        [ 0.0686, -0.4340],\n",
+       "        [ 0.6754, -0.1459],\n",
+       "        [ 0.4900, -2.1244],\n",
+       "        [ 0.3606,  0.8209],\n",
+       "        [-1.4012, -0.4754],\n",
+       "        [ 0.1316,  0.4431],\n",
+       "        [-0.2416, -0.1228],\n",
+       "        [ 0.7791,  1.1401],\n",
+       "        [-0.1821,  0.0800],\n",
+       "        [ 1.2458,  0.1638],\n",
+       "        [-0.1977,  0.1500],\n",
+       "        [ 0.6284,  0.9660],\n",
+       "        [ 0.3503, -1.3784],\n",
+       "        [-0.4973,  0.2641],\n",
+       "        [ 0.1854, -0.9773],\n",
+       "        [ 0.0410,  0.7770],\n",
+       "        [ 0.2522, -0.6684],\n",
+       "        [ 0.7541, -0.3799],\n",
+       "        [-1.3384,  1.1626],\n",
+       "        [ 0.9145,  0.3126],\n",
+       "        [ 0.4282,  1.1034],\n",
+       "        [-0.2724,  0.1731],\n",
+       "        [ 0.5598,  0.2846],\n",
+       "        [-0.1600, -0.8552],\n",
+       "        [ 0.4487,  0.2387],\n",
+       "        [-0.4292, -2.3721]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a069d8a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.4012, -0.4754])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's take the emb for the ix=5.\n",
+    "# One way to get it is just pluck the row.\n",
+    "C[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8b103fb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.4012, -0.4754])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Another way to do it is by having a one-hot encoding then multiply it with the emb matrix\n",
+    "# (think of it like a weight matrix).\n",
+    "F.one_hot(torch.tensor(5), num_classes=27).float() @ C\n",
+    "\n",
+    "# We will get the same thing as above because of matrix multiplication works.\n",
+    "# But for this lecture we will just use the way it is done in the cell above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "236576af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.4012, -0.4754],\n",
+       "        [ 0.1316,  0.4431],\n",
+       "        [-0.2416, -0.1228]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In pytorch we can index lists. Infact it can be tensors.\n",
+    "C[torch.tensor([5, 6, 7])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ce591834",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 3, 2])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# It also works with 2D tensors. So we can directly plug in tensor X and get the embeddings for the chars.\n",
+    "C[X].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "97833117",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[13, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cab873d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0.0686, -0.4340])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C[X][13, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3c57fe88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0.0686, -0.4340])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# As can be seen, it plucks out the emb for 1.\n",
+    "C[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4cfa1615",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 3, 2])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emb = C[X]\n",
+    "emb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcfa3eb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the weights and biases of the neurons (MLP).\n",
+    "# We are working with the figure 1 on page 6 of this paper:\n",
+    "# https://www.jmlr.org/papers/volume3/bengio03a/bengio03a.pdf\n",
+    "# \"A Neural Probabilistic Language Model\"\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
