Update mlp notebook

--- a/makemore_series_karpathy/makemore_part2_mlp.ipynb
+++ b/makemore_series_karpathy/makemore_part2_mlp.ipynb
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "125cc1ae",
+   "id": "4844d75c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b5ff57fc",
+   "id": "b6107d46",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a069d8a5",
+   "id": "4be93965",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8b103fb6",
+   "id": "c594ab53",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "236576af",
+   "id": "e29def42",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ce591834",
+   "id": "2370a9fe",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "97833117",
+   "id": "e3bd82db",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cab873d8",
+   "id": "d2d2317d",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3c57fe88",
+   "id": "d22259f0",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4cfa1615",
+   "id": "582b73f3",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcfa3eb0",
+   "id": "331410ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
     "# We are working with the figure 1 on page 6 of this paper:\n",
     "# https://www.jmlr.org/papers/volume3/bengio03a/bengio03a.pdf\n",
     "# \"A Neural Probabilistic Language Model\"\n",
-    "\n"
+    "# This is also available in the \"relevant_papers\" folder on the repo."
    ]
   }
  ],
